--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 
   <body>
     <h1> Happy Birthday Quinn! </h1>
+    <img src="http://www.imgion.com/images/02/Birthday-balloons-greetings.jpg"
+         alt="Birthday balloons">
   </body>
 </html>
